# fairmix-audit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yml  smoke.yml
docs/: model_card_template.md  reproducibility_checklist.md  review_to_workflow_map.md
fairmix_audit/: __init__.py  baselines.py  cli.py  config.py  data.py  experiments.py  memory.py  metrics.py  missingness.py  mixing.py  reporting.py  splits.py  stats.py
results/: metric_deltas_vs_erm.csv  missingness_sensitivity.csv
results/tables/: fairness_conclusion_flip_summary.csv  fairness_summary.csv  hidden_intersectional_regression_summary.csv  mcar_vs_mnar_ablation_summary.csv  missingness_sensitivity_summary.csv  oracle_vs_missing_summary.csv  utility_summary.csv
scripts/: compare_base_learners.py  make_tables.py  run_experiments.py
tests/: test_data_loading.py  test_integration_methods.py  test_memory.py  test_metrics.py  test_missingness_analyses.py  test_mixing.py  test_reporting.py  test_workflow_planning.py
