[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairmix-audit"
version = "0.1.0"
description = "Seed-calibrated stress tests for fairness-audit reliability under protected-attribute label missingness."
requires-python = ">=3.11"
dependencies = [
  "folktables==0.0.12",
  "fairlearn==0.12.0",
  "matplotlib==3.10.3",
  "numpy==2.2.6",
  "pandas==2.2.3",
  "pyyaml==6.0.2",
  "scikit-learn==1.6.1",
  "scipy==1.15.3",
  "seaborn==0.13.2",
  "statsmodels==0.14.4",
  "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.5"]

[project.scripts]
fairmix-run = "fairmix_audit.cli:run"
fairmix-tables = "fairmix_audit.cli:tables"

[tool.setuptools.packages.find]
include = ["fairmix_audit*"]
